# Web-Class-Helper

./: .clang-format  .clang-format-ignore  .gitignore  .gitmsgrc.cjs  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  CONTRIBUTING.zh-Hans.md  ERROR.cpp  Img.py  LICENSE  README.md  README.zh-CN.md  README.zh-Hans.md  SECURITY.md  SECURITY.zh-CN.md  SECURITY.zh-Hans.md  WCH-yaml.h  WCH.cpp  WCH.h  WCH.manifest  WCH.rc  WCH.sln  WCH.vbs  WCH.vcxproj  WCH.vcxproj.filters  YAML.py  codecov.yml  resource.h  resource.hpp  settings.yml  shasum.hpp  speedtest.py  trans.py  vcpkg.json  version.hpp
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BugReport.md  BugReport.yml  BugReport.zh-CN.yml  FeatureRequest.md  FeatureRequest.yml  FeatureRequest.zh-CN.yml  NewRecommendations.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: en-US.yml  zh-CN.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  checkiss.yml  clangformat.yml  codecov.yml  (+4 more)
UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters
help/: anti-idle  clock  game  help  hide  license  ow  pi  quit  speedtest  task  time  trans  update  work
lang/: en-Us.yml  zh-Hans.yml
lib/: yaml-cpp.lib
modules/: apis.h  apis.hpp  basic.h  basic.hpp  commands.h  commands.hpp  file-process.h  file-process.hpp  functions.h  functions.hpp  init.h  init.hpp  variables.h
resources/: help.json
scripts/: build.ps1  copy-internal.ps1  copy-public.ps1  copy.ps1  shasum.ps1  sign.ps1
wiki/: Brief.md  Build.md  Contact.md  Contribution.md  Directories.md  FAQ.md  Home.md  Installation.md  Scripts.md  Use.md  _Footer.md  _Sidebar.md
(+15 files in other folders)
